# RegularPolyhedron

./: .gitignore  .gitmodules  CMakeLists.txt  DrawingObject.cpp  DrawingObject.h  FaceManager.cpp  FaceManager.h  PolyHedronDrawer.cpp  PolyHedronDrawer.h  README.md  VertexManager.cpp  VertexManager.h  main-example.cpp  main-gl-prog.cpp  main-prog.cpp  simple_aux.cpp  simple_aux.h
resources/shaders/: ObjShader_face.fs  ObjShader_face.vs  ObjShader_line.fs  ObjShader_line.vs
